spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,7 @@
  list-style-type: none;
 }
 
-.homelogo:hover{
-  transform: scale(1.1); /* Increase size by 20% on hover */
-  transition: transform 0.1s ease-in-out; /* Add smooth transition */
-}
+
 
 
 .logo-repo{
@@ -63,12 +60,21 @@
 
 .side--bar-list-items{
   padding: 12px 16px;
+  box-sizing: border-box;
 }
+
 
 .side--bar-list-items:hover{
   background-color: rgb(19, 18, 18);
   border-radius: 8px;
 }
+
+.side--bar-list-items:hover .homelogo{
+  transform: scale(1.1); /* Increase size by 20% on hover */
+  transition: transform 0.1s ease-in-out; /* Add smooth transition */
+}
+
+
 
 
 
